[gd_scene load_steps=5 format=3 uid="uid://cxjw8tk4kep1p"]

[ext_resource type="Script" path="res://Scenes/PlatformerPlayer/Keys/KeyComponent.gd" id="1_agsc3"]
[ext_resource type="Texture2D" uid="uid://cg1ymalfuxac" path="res://Resources/Images/New Piskel.png" id="2_eda6d"]
[ext_resource type="Script" path="res://Scenes/PlatformerPlayer/TriggerComponent/SenderComponent.gd" id="3_yqoax"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xubi1"]
size = Vector2(32, 32)

[node name="Key01" type="Area2D" node_paths=PackedStringArray("senderComp")]
collision_layer = 32
collision_mask = 2
script = ExtResource("1_agsc3")
senderComp = NodePath("SenderComponent")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 0, 1)
texture = ExtResource("2_eda6d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xubi1")

[node name="SenderComponent" type="Node2D" parent="."]
script = ExtResource("3_yqoax")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
